test/fail/MPTC_BoundVar.curry
{-# LANGUAGE MultiParamTypeClasses, FunctionalDependencies #-}

class R a b where

class R a b => Q a where


